--- a/window.ui
+++ b/window.ui
@@ -25,27 +25,10 @@
         <string>Sort</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_3">
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>Folder to Sift</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLineEdit" name="sift_folder"/>
-        </item>
         <item row="1" column="1">
          <widget class="QPushButton" name="sift_btn_select_folder">
           <property name="text">
            <string>Select File</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0" colspan="2">
-         <widget class="QPushButton" name="sift_btn">
-          <property name="text">
-           <string>Sift</string>
           </property>
          </widget>
         </item>
@@ -65,6 +48,47 @@
         </item>
         <item row="5" column="0" colspan="2">
          <widget class="QTextBrowser" name="sift_latest_log"/>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLineEdit" name="sift_folder"/>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>Folder to Sift</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0" colspan="2">
+         <widget class="QPushButton" name="sift_btn">
+          <property name="text">
+           <string>Sift</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="0">
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>Prompt</string>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="0">
+         <widget class="QLineEdit" name="Sift_Prompt"/>
+        </item>
+        <item row="7" column="0">
+         <widget class="QLabel" name="prompt_text">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="1">
+         <widget class="QPushButton" name="prompt_ent">
+          <property name="text">
+           <string>Enter</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
